Add colour and custom grid size
Added randomized colour on the first pass and darken colour by 10% on
sequential passes. Also added button to customize grid sizes;

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div class="grid"></div>
+    <div>Hold alt to draw.</div>
+    <button class="grid-button">New Grid</button>
+    <div class="grid-container">
+      <div class="grid"></div>
+    </div>
   </body>
 </html>
