--- a/index.html
+++ b/index.html
@@ -6,13 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <script src="script.js" defer></script>
   </head>
   <body>
     <div>Hold alt to draw.</div>
-    <button class="grid-button">New Grid</button>
-    <div class="grid-container">
-      <div class="grid"></div>
+
+    <div class="content">
+      <div class="sidebar">
+        <button id="new-grid">New Grid</button>
+        <button id="rainbow">Rainbow</button>
+        <button id="eraser">Eraser</button>
+        <button id="grid-lines">Grid Lines</button>
+      </div>
+
+      <div class="grid-container">
+        <div class="grid"></div>
+      </div>
     </div>
   </body>
 </html>
