--- a/index.html
+++ b/index.html
@@ -13,14 +13,22 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div>Hold alt to draw.</div>
+    <div class="header">
+        <h1 id="title">Etch-a-Sketch</div>
+    </div>
 
     <div class="content">
       <div class="sidebar">
-        <button id="new-grid">New Grid</button>
+        <div class="color-container">
+            <input id="primaryColor" class="colorPicker" type="color" value="#000000">
+            <input id="secondaryColor" class="colorPicker" type="color" value="#ffffff">
+        </div>
         <button id="rainbow">Rainbow</button>
         <button id="eraser">Eraser</button>
+        <button id="clear">Clear</button>
         <button id="grid-lines">Grid Lines</button>
+        <div>16 x 16</div>
+        <input id="grid-size" type="range">
       </div>
 
       <div class="grid-container">
