--- a/index.html
+++ b/index.html
@@ -14,24 +14,34 @@
   </head>
   <body>
     <div class="header">
-        <h1 id="title">Etch-a-Sketch</div>
+      <h1 id="title">Etch-a-Sketch</h1>
     </div>
 
     <div class="content">
       <div class="sidebar">
         <div class="color-container">
-            <input id="primaryColor" class="colorPicker" type="color" value="#000000">
-            <input id="secondaryColor" class="colorPicker" type="color" value="#ffffff">
+          <input
+            id="primaryColor"
+            class="colorPicker activeColor"
+            type="color"
+            value="#000000"
+          />
+          <input
+            id="secondaryColor"
+            class="colorPicker"
+            type="color"
+            value="#ffffff"
+          />
         </div>
         <button id="rainbow">Rainbow</button>
         <button id="eraser">Eraser</button>
         <button id="clear">Clear</button>
         <button id="grid-lines">Grid Lines</button>
         <div>16 x 16</div>
-        <input id="grid-size" type="range">
+        <input id="grid-size" type="range" />
       </div>
 
-      <div class="grid-container">
+      <div class="grid-container" oncontextmenu="return false">
         <div class="grid"></div>
       </div>
     </div>
