--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Etch-a-Pixel</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
@@ -12,7 +12,7 @@
     />
     <script src="script.js" defer></script>
   </head>
-  <body draggable="false">
+  <body>
     <div class="header">
       <h1 id="title">Etch-a-Pixel</h1>
     </div>
@@ -37,15 +37,12 @@
         <input id="size-selector" type="range" value="16" min="4" max="64" />
         <button id="confetti">Confetti</button>
         <button id="eraser">Eraser</button>
+        <button id="invert">Invert</button>
         <button id="clear">Clear</button>
         <button id="grid-lines">Grid Lines</button>
         <button id="export">Export</button>
       </div>
-      <div
-        class="grid-container"
-        oncontextmenu="return false"
-        draggable="false"
-      >
+      <div class="grid-container" oncontextmenu="return false">
         <div class="grid"></div>
       </div>
       <div class="sidebar">
