--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
         <div class="color-container">
           <input
             id="primaryColor"
-            class="colorPicker"
+            class="color-picker"
             type="color"
             value="#333333"
           />
           <input
             id="secondaryColor"
-            class="colorPicker"
+            class="color-picker"
             type="color"
             value="#fafafa"
           />
         </div>
         <div id="current-size">16 x 16</div>
         <input id="size-selector" type="range" value="16" min="4" max="64" />
-        <button id="confetti">Confetti</button>
         <button id="eraser">Eraser</button>
+        <button id="confetti">Confetti</button>
         <button id="invert">Invert</button>
         <button id="clear">Clear</button>
         <button id="grid-lines">Grid Lines</button>
