Fix right click bug

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <script src="script.js" defer></script>
   </head>
-  <body>
+  <body oncontextmenu="return false">
     <div class="header">
       <h1 id="title">Etch-a-Pixel</h1>
     </div>
@@ -42,7 +42,7 @@
         <button id="grid-lines">Grid Lines</button>
         <button id="export">Export</button>
       </div>
-      <div class="grid-container" oncontextmenu="return false">
+      <div class="grid-container">
         <div class="grid"></div>
       </div>
       <div class="sidebar">
