--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <script src="node_modules/html2canvas/dist/html2canvas.min.js"></script>
     <script src="script.js" defer></script>
   </head>
   <body oncontextmenu="return false">
@@ -40,7 +41,6 @@
         <button id="invert">Invert</button>
         <button id="clear">Clear</button>
         <button id="grid-lines">Grid Lines</button>
-        <button id="export">Export</button>
       </div>
       <div class="grid-container">
         <div class="grid"></div>
