--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <script src="node_modules/html2canvas/dist/html2canvas.min.js"></script>
     <script src="script.js" defer></script>
   </head>
   <body oncontextmenu="return false">
@@ -40,6 +39,7 @@
         <button id="confetti">Confetti</button>
         <button id="invert">Invert</button>
         <button id="grid-lines">Grid Lines</button>
+        <button id="clear">Clear</button>
       </div>
       <div class="grid-container">
         <div class="grid"></div>
